--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
 <body>
     <div id="background">
     </div>    
-    <div class="torch" id="torch1">
+    <div class="torch" id="torch1" alt="one of two torch animations in corners of window">
     </div>
     </div>
     <div id="title">
         Hall of Sprite Animations
     </div>
-    <div class="torch" id="torch2">
+    <div class="torch" id="torch2" alt="one of two torch animations in corners of window">
     </div>
 
     <div class="window-flex">
-        <div class="window" id="window1">
+        <div class="window" id="window1" alt="animation of ball bouncing">
         </div>
-        <div class="window" id="window2">
+        <div class="window" id="window2" alt="animation of flower blooming and bursting">
         </div>
-        <div class="window" id="window3">
+        <div class="window" id="window3" alt="animation of Christiano Ronaldo doing the sui celebration">
         </div>
     </div>
     <div id="author">
